--- a/style.css
+++ b/style.css
@@ -10,3 +10,6 @@ body {
 .small-text {
     font-size: 0.8em; /* Adjust the size as needed */
 }
+.large-text {
+    font-size: 4em; /* Adjust the size as needed */
+}
