added short guide to jdownloader and bandizip

--- a/layouts/partials/paige/bof/links/content.html
+++ b/layouts/partials/paige/bof/links/content.html
@@ -11,8 +11,15 @@ rel="stylesheet" href="/DataTables/custom-styles.css">
 	<p>
 		Below is my attempt at a powerful and configurable link list. It is a work in progress, so I ask that you be patient with me. If you have any suggestions, please let me know on my Discord server
 		<a href="https://discord.gg/2FcTGpME" target="_blank" rel="noopener noreferrer">The 16th Sanctuary</a>.
-
 	</p>
+	<p>
+		I'll flesh the process out more soon, but my go-to has been using
+		<a href="https://jdownloader.org/download/index" target="_blank" rel="noopener noreferrer">Jdownloader</a>
+		to mass download links and
+		<a href="https://www.bandisoft.com/bandizip/" target="_blank" rel="noopener noreferrer">Bandizip</a>'s
+			    smart extract to actually try playing everything.
+	</p>
+
 </div>
 
 <table id="linkTable" class="display">
