--- a/layouts/partials/paige/bof/links/content.html
+++ b/layouts/partials/paige/bof/links/content.html
@@ -17,7 +17,7 @@ rel="stylesheet" href="/DataTables/custom-styles.css">
 		<a href="https://jdownloader.org/download/index" target="_blank" rel="noopener noreferrer">Jdownloader</a>
 		to mass download links and
 		<a href="https://www.bandisoft.com/bandizip/" target="_blank" rel="noopener noreferrer">Bandizip</a>'s
-			    smart extract to actually try playing everything.
+						    smart extract to actually try playing everything.
 	</p>
 
 </div>
@@ -154,6 +154,7 @@ headerCells.forEach((th, index) => {
     var datatable = $('#linkTable').DataTable({
 	order: [],
 orderCellsTop: true, // Use the top row of header cells for ordering
+responsive: true,
 layout: {
         topStart: 'pageLength',
 	top1Start: 'buttons',
